--- a/product-manager.html
+++ b/product-manager.html
@@ -40,11 +40,21 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/prodigygame/f27729a7-68dc-4c77-9569-97cc4cb01c1f'>Prodigy Game - Product Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://joinoyster.recruitee.com/o/product-manager-acquisition'>
+      Product Manager (Acquisition) - Oyster Financial Inc 
+    </a></h5> 
+<p><span class="badge badge-light">Mexico Mexico</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://faveo.join.com/jobs/463891-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -64,7 +74,7 @@
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -80,7 +90,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -88,7 +98,7 @@
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=olcsbfwU&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5zAoMwT'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=olcsbfwU&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5zAoMwT'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -178,7 +188,7 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -190,7 +200,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -198,7 +208,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -214,11 +224,11 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1831883?gh_src=eb585a351'>Job Application for Senior Product Manager at Deliveroo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1831883?gh_src=eb585a351'>Job Application for Senior Product Manager at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -320,7 +330,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -332,11 +342,11 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ansira/5156b5da-0ce5-425f-b617-288f9863bd52'>Ansira - Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ansira/5156b5da-0ce5-425f-b617-288f9863bd52'>Ansira - Product Owner</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -417,7 +427,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698184261-technical-product-owner-digital-offers-and-promotions'>TitanData Inc. Technical Product Owner - Digital Offers and Promotions | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698184261-technical-product-owner-digital-offers-and-promotions'>TitanData Inc. Technical Product Owner - Digital Offers and Promotions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -429,11 +439,11 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/soroco/jobs/1915133'>Job Application for Senior Product Manager at Soroco</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1915133'>Job Application for Senior Product Manager at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -447,14 +457,6 @@ online education programs and Physician customer relationship management?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/knockrentals/9c9feaa5-ddb7-48af-9136-51cd415a5cd0'>Knock, Inc - Senior Product Manager</a></h5> 
-<p><span class="badge badge-light">Seattle, WA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://spryker.join.com/jobs/464517-product-manager-spryker-commerce-os-m-f-d'>Job @ Spryker System (Berlin): Product Manager - S... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
