--- a/web-developer.html
+++ b/web-developer.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -110,11 +110,11 @@
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pepper.join.com/jobs/463127-php-web-developer-m-f-x'>Job @ Pepper (Winnipeg): PHP Web Developer (m/f/x) | JOIN</a></h5> 
+<h5><a href='https://pepper.join.com/jobs/463127-php-web-developer-m-f-x'>Job @ Pepper (Winnipeg): PHP Web Developer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>19 hours ago ... Pepper has a job opening for PHP Web Developer (m/f/x) in Winnipeg (published
 : 08.08.2019). Apply now or check the other available jobs.</p>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://foreignpolicy.recruitee.com/o/web-developer'>
+<h5><a href='https://foreignpolicy.recruitee.com/o/web-developer'>
       Web Developer - Foreign Policy
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -141,11 +141,11 @@
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer?source=GS'>Junior Web Developer - MedThink - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer?source=GS'>Junior Web Developer - MedThink - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Junior Web Developer at MedThink in Cary, NC.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain Madrid Madrid</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -185,7 +185,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -430,11 +430,11 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/spins/jobs/1931961'>Job Application for Jr Front-End Web Developer (Sherman Oaks) at SPINS, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/spins/jobs/1931961'>Job Application for Jr Front-End Web Developer (Sherman Oaks) at SPINS, LLC</a></h5> 
 <p><span class="badge badge-light">Sherman Oaks, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oliverusa/jobs/1852940'>Job Application for Web Content Developer at OLIVER North America</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oliverusa/jobs/1852940'>Job Application for Web Content Developer at OLIVER North America</a></h5> 
 <p><span class="badge badge-light">North America  North America Atlanta, GA  Charlotte, NC</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -442,7 +442,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/other-locations/senior-design-technologist/46170?utm_content=104068951&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/other-locations/senior-design-technologist/46170?utm_content=104068951&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
